<resources>
    <string name="app_name">Background</string>
    <string name="app">APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Open navigation close</string>
    <string name="desarrollador">Grupo 3</string>

    <!-- MENU ADMIN -->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesión</string>

    <!-- MENU CLIENTE -->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acerca de</string>
    <string name="Compartir">Compartir</string>
    <string name="Administrador">Administrador</string>

    <string name="Acceder">Acceder</string>


    <!-- REGISTRO DE ADMINISTRADORES -->
    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo Electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de registro</string>
    <string name="Registrar">Registrar</string>

    <!-- LOGIN DE ADMINISTRADORES -->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>

    <!-- CATEGORIAS -->
    <string name="fechaAdmin"> -- </string>
    <string name="BienvenidoTXT">Bienvenido(a): </string>
    <string name="NombreTXT"> -- </string>
    <string name="Eligeunacategoriatxt">Elige una categoría</string>
    <string name="Peliculas">Películas</string>
    <string name="Series">Series</string>
    <string name="Musica">Música</string>
    <string name="Videojuegos">Videojuegos</string>

    <!-- MENU PARTE SUPERIOR DERECHA -->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>


    <!-- AGREGAR PELICULAS -->
    <string name="IdPeliculas"> -- </string>
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="NombrePeliculas">Escriba el nombre aquí</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>

    <!-- AGREGAR MUSICA -->
    <string name="IdMusica"> -- </string>
    <string name="NombreTXTMusica">Nombre de imagen</string>
    <string name="NombreMusica">Escriba el nombre aqui</string>
    <string name="VistaMusica">0</string>
    <string name="PublicarMusica">Publicar</string>

    <!-- AGREGAR SERIES -->
    <string name="IdSerie"> -- </string>
    <string name="NombreTXTSerie">Nombre de imagen</string>
    <string name="NombreSerie">Escriba el nombre aquí</string>
    <string name="VistaSerie">0</string>
    <string name="PublicarSerie">Publicar</string>

    <!-- AGREGAR VIDEOJUEGOS -->
    <string name="IdVideojuegos"> -- </string>
    <string name="NombreTXTVideojuegos">Nombre de imagen</string>
    <string name="NombreVideojuegos">Escriba el nombre aqui</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuegos">Publicar</string>


    <!-- ITEM MUSICA -->
    <string name="NombreImagenMusica"> -- </string>
    <string name="Vista_Musica"> -- </string>

    <!-- ITEM SERIE -->
    <string name="NombreImagenSerie"> -- </string>
    <string name="Vista_Serie"> -- </string>

    <!-- ITEM PELICULA -->
    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <!-- ITEM VIDEOJUEGOS -->
    <string name="NombreImagenVideojuegos"> -- </string>
    <string name="VistasVideojuegos"> -- </string>

    <!--DIALOG ORDENAR-->
    <string name="OrdenarTXT">Ordenar en:</string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>

    <!--PERFIL-->
    <string name="PerfilAdministradorTxt">Mi perfil</string>
    <string name="MiInformacionTxt">Mi información</string>
    <string name="UIDPerfilTxt">UID:</string>
    <string name="UIDPerfil"> -- </string>
    <string name="NombresPerfilTxt">Nombres:</string>
    <string name="NombresPerfil"> -- </string>
    <string name="ApellidosPerfilTxt">Apellidos:</string>
    <string name="ApellidosPerfil"> -- </string>
    <string name="CorreoPerfilTxt">Correo:</string>
    <string name="CorreoPerfil"> -- </string>
    <string name="PasswordPerfilTxt">Contraseña:</string>
    <string name="PasswordPerfil"> -- </string>
    <string name="EdadPerfilTxt">Edad:</string>
    <string name="EdadPerfil"> -- </string>
    <string name="ActualizarPass">Actualizar contraseña</string>
    <string name="ActualizarDatos">Actualizar datos</string>

    <!--Cambiar contraseña-->
    <string name="MisCredencialesTXT">Mis credenciales</string>
    <string name="PassActualTXT">Contraseña actual: </string>
    <string name="PassActual">*********</string>
    <string name="ActualPassET">Contraseña actual</string>
    <string name="NuevoPassET">Nueva contraseña</string>
    <string name="CAMBIARPASSBTN">Cambiar contraseña</string>
    <string name="IRINICIOBTN">Volver</string>
    <string name="NOTATXT">Nota: Si cambia la contraseña la sesión se cerrará automáticamente.</string>

    <!--Administrador item-->
    <string name="NombresAdmin">Nombres</string>
    <string name="CorreoAdmin">Correo electrónico</string>
    <string name="buscar_administrador">Buscar</string>

    <!--Detalle administrador-->
    <string name="DetalletTXT">Información del administrador</string>
    <string name="UidDetalleAdmin">UID</string>
    <string name="NombresDetalleAdmin">Nombre</string>
    <string name="ApellidosDetalleAdmin">Apellido</string>
    <string name="CorreoDetalleAdmin">Correo</string>
    <string name="EdadDetalleAdmin">Edad</string>

    <string name="CategoriasTXT">Categorias</string>
    <string name="NombreCategoriaD">---</string>
    <string name="MasCategoriasTXT">Más Categorias</string>
    <string name="NombreCategoriaF">---</string>
    <string name="InfoTXT">Disfruta de nuestra app</string>

    <!--IMAGEN CAT FIREBASE ELEGIDA-->
    <string name="NombreImg_Cat_Elegida"> -- </string>
    <string name="Vista_Img_Cat_Elegida"> -- </string>

    <!--DETALLE IMAGEN-->
    <string name="NombreImagenTXT">Nombre de imagen</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>

    <string name="TituloinformativoTXT"> -- </string>

    <string name="fecha"> -- </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Acerca de aplicacion-->
    <string name="AcercaDeApp">Acerca de</string>
    <string name="InfoDesarrollador">Desarrollado por: Grupo 3</string>
    <string name="InfoCorreo">Correo: grupo3backgroundApp@gmail.com</string>
    <string name="InfoVersion">Versión: 1.0</string>
    <string name="InfoRedes">Nuestras redes</string>
    <string name="Ir_website">Página web</string>
    <string name="Ir_facebook">Facebook</string>
    <string name="Ir_instagram">Instagram</string>
    <string name="Ir_youtube">Youtube</string>

</resources>