<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.PerfilAdmin">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PerfilAdministradorTxt"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/FotoPerfilImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/perfil"/>
        
        <TextView
            android:text="@string/MiInformacionTxt"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--UID-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/UIDPerfilTxt"
                android:text="@string/UIDPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/UIDPerfil"
                android:text="@string/UIDPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--NOMBRES-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/NombresPerfilTxt"
                android:text="@string/NombresPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/NombresPerfil"
                android:text="@string/NombresPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--APELLIDOS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/ApellidosPerfilTxt"
                android:text="@string/ApellidosPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/ApellidosPerfil"
                android:text="@string/ApellidosPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CORREO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/CorreoPerfilTxt"
                android:text="@string/CorreoPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/CorreoPerfil"
                android:text="@string/CorreoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CONTRASEÑA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/PasswordPerfilTxt"
                android:text="@string/PasswordPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/PasswordPerfil"
                android:text="@string/PasswordPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--EDAD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/EdadPerfilTxt"
                android:text="@string/EdadPerfilTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/EdadPerfil"
                android:text="@string/EdadPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/ActualizarPass"
            android:text="@string/ActualizarPass"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/editar_ico"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:background="@drawable/btn_personalizado_dos"
            android:layout_width="240dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ActualizarDatos"
            android:text="@string/ActualizarDatos"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/editar_ico"
            android:layout_gravity="center"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:background="@drawable/btn_personalizado_dos"
            android:layout_width="240dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>