<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.Detalle_Administrador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/DetalletTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImagenDetalleAdmin"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:src="@drawable/perfil"
            android:layout_marginTop="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000"
            android:layout_marginVertical="20dp"/>

        <TextView
            android:id="@+id/UidDetalleAdmin"
            android:text="@string/UidDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/NombresDetalleAdmin"
            android:text="@string/NombresDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/ApellidosDetalleAdmin"
            android:text="@string/ApellidosDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/CorreoDetalleAdmin"
            android:text="@string/CorreoDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/EdadDetalleAdmin"
            android:text="@string/EdadDetalleAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="15sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>