<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosCliente.AcerDeCliente">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/AcercaDe"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#1F6180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:text="@string/InfoDesarrollador"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/InfoCorreo"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/InfoVersion"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/InfoRedes"
            android:textColor="#1F6180"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/website"/>

            <TextView
                android:id="@+id/Ir_website"
                android:text="@string/Ir_website"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook"/>

            <TextView
                android:id="@+id/Ir_facebook"
                android:text="@string/Ir_facebook"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/instagram"/>

            <TextView
                android:id="@+id/Ir_instagram"
                android:text="@string/Ir_instagram"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/youtube"/>

            <TextView
                android:id="@+id/Ir_youtube"
                android:text="@string/Ir_youtube"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>